# restic-backup

./: .gitignore  pyproject.toml  restic-backup-config.yaml  restic-backup.service
example/: restic-backup-config.yaml
restic_backup/: backup.py  exceptions.py
tests/: test_restic_backup.py
